Completed upto 2nd Api and recruitment Form

--- a/recruitment_info/templates/recruitmentForm.html
+++ b/recruitment_info/templates/recruitmentForm.html
@@ -1,13 +1,13 @@
 {% load bootstrap3 %}
 {% bootstrap_messages %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Registration</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
@@ -20,19 +20,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-            <h2>Form</h2>
-                <form action='/login/' method="post">
-                    {% for message in messages %}
-                    <div class="alert alert-success">
+            <h2>Recruitment Form</h2>
+                 <form action='/recruitmentForm/' method="POST" enctype="multipart/form-data">
+
+                     {% for message in messages %}
+                        <div class="alert alert-success">
                         <a class="close" href="#" data-dismiss="alert">×</a>
                         {{ message }}
-                    </div>
-                    {% endfor %}
+                        </div>
+                     {% endfor %}
 
-                    {% csrf_token %}
-                    {% bootstrap_form form %}
+                     {% csrf_token %}
+                     {% bootstrap_form form %}
                     <div class="form-group">
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <button type="submit" class="btn btn-default ">Submit</button>
                     </div>
                 </form>
             </div>
