--- a/login/templates/loginForm.html
+++ b/login/templates/loginForm.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-            <h2>Form</h2>
+            <h2>Log In</h2>
                 <form action='/login/' method="post">
                     {% for message in messages %}
                     <div class="alert alert-success">
